# PVR

c1/tests/: 01_factorial.rs  02_array_max.rs  03_struct.rs  04_luhn_algorithm.rs  05_match_parentheses.rs  06_write_tests.rs
c10/src/: main.rs
c11/src/: main.rs
c1_fizzbuzz/: Cargo.toml
c1_fizzbuzz/src/: main.rs
c2/tests/: 01_state_transition_struct.rs  02_state_transition_enum.rs
c3/tests/: 01_read_after_eof.rs  02_witness.rs  03_state_machine.rs  04_cow.rs
c4/tests/: 02_case_insensitive_cmp.rs  03_fibonacci.rs  04_iter_exercises.rs  05_range.rs
c8/src/: main.rs
c9/src/: main.rs
project/: .env.preset  .gitignore  Cargo.toml  tokencache.json
project/src/: app.rs  client.rs  event.rs  main.rs  network_types.rs  peer.rs  server.rs  ui.rs
project/src/providers/: mod.rs  provider_traits.rs  spotify_provider.rs  youtube_provider.rs
project/src/types/: mod.rs  music_types.rs  playlist_selector_key_event_response.rs
project/src/widgets/: mod.rs  playlist_selector.rs  song_selector.rs  spotify_column.rs  youtube_column.rs
project/src/widgets/generic/: list_selector.rs  mod.rs  user_input.rs
project/src/widgets/popups/: add_playlist.rs  add_song.rs  add_song_selection.rs  loading_popup.rs  message_popup.rs  mod.rs  popup.rs
u2/: Cargo.toml
u2/tests/: 01_calc.rs  02_match_exercises.rs  03_state_transition.rs  04_srl_validator.rs  05_brainfuck_interpreter.rs
u3/src/: encrypt_decrypt.rs
u3/tests/: 01_longest.rs  02_strip_prefix.rs  03_interleave.rs  04_merge_slices.rs  05_bubble_sort.rs  06_zerocopy_parsing.rs
u4/tests/: 01_shape.rs  02_split_iterator.rs  03_cumulative_sum.rs  04_adjacent_diff.rs  05_poker_hand_value.rs  06_ringbuffer.rs
u5/: Cargo.toml
u5/tests/: 01_binary_tree.rs  02_parser_combinator.rs  03_graph.rs
u7/: Cargo.toml
u7/tests/: 03_factorio.rs  (+2 more)
(+13 files in other folders)
