[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = { version = "0.2.1", features = [ "x11rb", "serde" ] }
futures = "0.3.30"
rdev = { version = "0.5.3", features = [ "unstable_grab" ]} # Alternative to Enigo
# libc = "0.2"
# x11 = {version = "2.18", features = ["xlib", "xrecord", "xinput"]}
evdev-rs = { version = "0.6.1", features = ["serde"] }
epoll = {version = "4.1.0"}
# inotify = {version = "0.8.2", default-features=false}


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "peer"
path = "src/peer.rs"