[package]
name = "project"
version = "0.1.0"
authors = ["Daniel Makovský <daniel@makovsky.dev>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
google-youtube3 = "6.0.0"
ratatui = "0.29.0"
spotify-rs = { git = "https://github.com/ZakkProjects/spotify-rs-next.git", branch = "next" } # Cloned repository with quick fix to filter invalid api responses
tokio = { version = "1.40.0", features = ["full"] }
warp = "0.3.7"
webbrowser = "1.0.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6.3"
strum = "0.26.3"
env_logger = "0.11.5"
chrono = "0.4.38"
futures-util = "0.3.31"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }